# messages

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  Procfile  README.md  compose.yaml
.github/workflows/: messages.yml
docker/auth/: realm.json
docs/: architecture.md  env.md
env.d/development/: backend.dist  common.dist  kc_postgresql.dist  mta-in.dist  mta-out.dist  postgresql.dist
src/backend/: .pylintrc  Dockerfile  MANIFEST.in  Procfile  gunicorn.conf.py  pyproject.toml  setup.py
src/backend/core/: admin.py  apps.py  enums.py  factories.py  forms.py  models.py  signals.py  tasks.py  urls.py
src/backend/core/api/: __init__.py  filters.py  openapi.json  permissions.py  serializers.py  utils.py  viewset_mta.py  viewsets.py
src/backend/core/authentication/: __init__.py  backends.py
src/backend/core/identity/: keycloak.py
src/backend/core/mda/: delivery.py  inbound.py  outbound.py  signing.py
src/backend/core/migrations/: 0001_initial.py  0002_alter_mailboxaccess_mailbox_contact_message_and_more.py  0002_message_mime_id.py  0002_remove_message_is_read_remove_thread_is_read_and_more.py  0003_alter_mailboxaccess_permission_and_more.py  0004_message_is_draft.py  (+30 more)
src/backend/messages/: celery_app.py  settings.py  urls.py  wsgi.py
src/frontend/: Dockerfile  Dockerfile.dev  Dockerfile.install  Dockerfile.tools  cunningham.ts  eslint.config.mjs  next.config.ts  orval.config.ts  package-lock.json  package.json  tsconfig.json
src/frontend/public/: browserconfig.xml  manifest.json
src/keycloak/: Procfile  realm.json
src/keycloak/scripts/: scalingo_precompile.sh
src/mpa/: compose.yaml
src/mpa/rspamd/: Dockerfile  start.sh
src/mpa/tests/: Dockerfile  requirements.txt
src/mta/: README.md  compose.yaml
src/mta-in/: Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
src/mta-in/postfix/: Dockerfile  entrypoint.sh  requirements.txt
src/mta-in/tests/: conftest.py  test_attachments.py  test_email_delivery.py  test_smtp_protocol.py
src/mta-out/: Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
src/mta-out/postfix/: Dockerfile  entrypoint.sh
src/mta-out/tests/: conftest.py  test_attachments.py  test_email_sending.py  test_message_integrity.py  test_smtp_auth.py
src/mta/postfix/: Dockerfile  entrypoint.sh  mailbox_command.py  pyproject.toml  recipient_check_service.py
src/mta/postfix/etc/: main.cf  master.cf
src/mta/tests/: Dockerfile  conftest.py  requirements.txt  test_attachments.py  test_email_delivery.py  test_smtp_protocol.py
src/nginx/: servers.conf.erb
(+238 files in other folders)
